--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -17,11 +17,11 @@
 <!ENTITY Ctr_window			"wokno">
 <!ENTITY Ctr_centered		"Centrěrowano">
 <!ENTITY Ctr_page			"Bok">
-<!ENTITY Ctr_position		"Position">
-<!ENTITY Ctr_appearance		"Appearance">
-<!ENTITY Ctr_left			"Left">
-<!ENTITY Ctr_right			"Right">
-<!ENTITY Ctr_privmode		"(private window)">
+<!ENTITY Ctr_position		"Pozicija">
+<!ENTITY Ctr_appearance		"Naglěd">
+<!ENTITY Ctr_left			"Nalěwo">
+<!ENTITY Ctr_right			"Napšawo">
+<!ENTITY Ctr_privmode		"(priwatne wokno)">
 
 <!ENTITY Ctr_cuibuttons		"Tłocaški">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
@@ -63,10 +63,10 @@
 <!ENTITY Ctr_tabwidthinfo3	"Gódnoty pód 48px zawinuju zwětšego zmólki w pśedstajenju!">
 <!ENTITY Ctr_square_edges	"Kwadratiske górne rožki">
 <!ENTITY Ctr_tttitlebar		"Rejtarkowy titel w titelowej rědce &brandShortName;">
-<!ENTITY Ctr_ttoverflow		"Long tab titles">
-<!ENTITY Ctr_ttoverfl_def	"Default overflow effect">
-<!ENTITY Ctr_ttoverfl_no	"No overflow effect">
-<!ENTITY Ctr_tabtitle		"Tab title position">
+<!ENTITY Ctr_ttoverflow		"Dłujke rejtarkowe titele">
+<!ENTITY Ctr_ttoverfl_def	"Standardne pśeblendowanje">
+<!ENTITY Ctr_ttoverfl_no	"Žedno pśeblendowanje">
+<!ENTITY Ctr_tabtitle		"Pozicija rejtarkowego titela">
 <!ENTITY Ctr_tabinsertion	"Pśiswójźbny rejtark za aktualnym rejtarkom zasunuś">
 <!ENTITY Ctr_emptytfavico	"Faworitowy symbol pokazaś (jolic sedło žeden njama)">
 <!ENTITY Ctr_emptytfavico_n	"Žeden">
@@ -112,7 +112,7 @@
 <!ENTITY Ctr_appbuttonc_cu	"Swójska">
 <!ENTITY Ctr_appbuttonct	"Swójska barwa za tłocašk na symbolowej rědce">
 <!ENTITY Ctr_appbuttonI1	"Nowy start dopórucony">
-<!ENTITY Ctr_appbuttonI1e	"Jano widobny w titelnej rědce &brandShortName;, nic na titelnej rědce źěłowego systema Windows!">
+<!ENTITY Ctr_appbuttonI1e	"Tłošask &brandShortName; jo jano widobny na titelowej rědce &brandShortName; a nic na titelowej rědce źěłowego systema!">
 <!ENTITY Ctr_appbutmhi		"Wuša pozicija (jolic jo na rejtarkowej rědce)">
 <!ENTITY Ctr_appbautocol	"Barwu wobglědowakowego kanala awtomatiski nastajiś (standard/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ramiki a slězynowe barwy schowaś">
@@ -214,7 +214,7 @@
 <!ENTITY Ctr_bmbviewbmsb	"Wuskokujucy meni: 'Bocnicu cytańskich znamjenjow pokazaś' pokazaś">
 <!ENTITY Ctr_bmbviewbmtb	"Wuskokujucy meni: 'Rědku cytańskich znamjenjow pokazaś' pokazaś">
 <!ENTITY Ctr_bmbnounsort	"Wuskokujucy meni: 'Druge cytańske znamjenja' schowaś">
-<!ENTITY Ctr_bmbutclpopup	"Popup: only show 'Bookmark this page' and bookmarks">
+<!ENTITY Ctr_bmbutclpopup	"Wuskokujucy meni: jano 'Toś ten bok ako cytańske znamjo składowaś' a cytańske znamjenja pokazaś">
 <!ENTITY Ctr_bmbutnotext	"Tekst na rědce cytańskich znamjenjow schowaś">
 <!ENTITY Ctr_skipprintpr	"Śišćarski tłocašk: Śišćarski pśeglěd pśeskócyś">
 <!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje rědki: 'Do menija pśesunuś', 'ze symboloweje rědki wótpóraś', 'wšykne rejtaki znowego zacytaś/ako cytańske znamje składowaś' a 'rejtark zacyniś anulěrowaś' schowaś">
@@ -418,8 +418,8 @@
 <!ENTITY Ctr_support_forum1	"MozillaZine (engelski forum)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (nimski forum)">
 <!ENTITY Ctr_github_issues	"Problem na Github k wěsći daś">
-<!ENTITY Ctr_newversion		"Latest CTR version">
-<!ENTITY Ctr_newversion2	"Latest CTR beta">
+<!ENTITY Ctr_newversion		"Nejnowša CTR-wersija">
+<!ENTITY Ctr_newversion2	"Nejnowša CTR beta">
 
 <!ENTITY Ctr_addon-bar.accesskey		"R">
 <!ENTITY appMenuGettingStarted.label	"Prědne kšace">
@@ -427,8 +427,8 @@
 <!ENTITY Ctr_menu_restart.label			"Znowego startowaś">
 <!ENTITY Ctr_restartapp					"Znowego startowaś w meniju '&brandShortName;' a w meniju Dataja pokazaś">
 <!ENTITY Ctr_ctrnewinv					"Nowe nastajenja za aktualnu wersiju &brandShortName; pódšmarnuś">
-<!ENTITY Ctr_cssoverride				"Custom css code">
-<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
+<!ENTITY Ctr_cssoverride				"Swójski CSS-kod">
+<!ENTITY Ctr_cssoverride2				"CSS-kod njebuźo se za zmólkami pśeglědowaś!">
 
 <!ENTITY Ctr_openInCurrentTab			"Zapódaśa w aktualnem rejtarku wócyniś">
 <!ENTITY Ctr_openInNewTab				"Zapódaśa w nowem rejtarku wócyniś">
