--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -15,13 +15,13 @@
 <!ENTITY Ctr_windowcontrols	"Réduire/Restaurer/Fermer (plein écran)">
 <!ENTITY Ctr_rr				"Redémarrage nécessaire !">
 <!ENTITY Ctr_window			"fenêtre">
-<!ENTITY Ctr_centered		"Centrer ce titre">
+<!ENTITY Ctr_centered		"Centrée">
 <!ENTITY Ctr_page			"Page">
-<!ENTITY Ctr_position		"Position">
-<!ENTITY Ctr_appearance		"Appearance">
-<!ENTITY Ctr_left			"Left">
-<!ENTITY Ctr_right			"Right">
-<!ENTITY Ctr_privmode		"(private window)">
+<!ENTITY Ctr_position		"Position :">
+<!ENTITY Ctr_appearance		"Apparence :">
+<!ENTITY Ctr_left			"À gauche">
+<!ENTITY Ctr_right			"À droite">
+<!ENTITY Ctr_privmode		"(fenêtre de navigation privée)">
 
 <!ENTITY Ctr_cuibuttons		"Boutons :">
 <!ENTITY Ctr_cuibutnormal	"Taille normale">
@@ -63,10 +63,10 @@
 <!ENTITY Ctr_tabwidthinfo3	"Les valeurs au-dessous de 48px causeront des erreurs dans la plupart des cas !">
 <!ENTITY Ctr_square_edges	"Coins supérieurs carrés">
 <!ENTITY Ctr_tttitlebar		"Afficher le titre de l'onglet actuel dans la barre de titre de &brandShortName;">
-<!ENTITY Ctr_ttoverflow		"Long tab titles">
-<!ENTITY Ctr_ttoverfl_def	"Default overflow effect">
-<!ENTITY Ctr_ttoverfl_no	"No overflow effect">
-<!ENTITY Ctr_tabtitle		"Tab title position">
+<!ENTITY Ctr_ttoverflow		"Titres d'onglets longs">
+<!ENTITY Ctr_ttoverfl_def	"Effet de débordement par défaut">
+<!ENTITY Ctr_ttoverfl_no	"Pas d'effet de débordement">
+<!ENTITY Ctr_tabtitle		"Position des titres :">
 <!ENTITY Ctr_tabinsertion	"Insérer les onglets liés à la suite de l'onglet actuel">
 <!ENTITY Ctr_emptytfavico	"Afficher un Favicon (pour les pages qui n'en proposent pas) :">
 <!ENTITY Ctr_emptytfavico_n	"Non">
@@ -74,7 +74,7 @@
 <!ENTITY Ctr_noemptypticon	"Enlever le Favicon « vide » des onglets épinglés">
 <!ENTITY Ctr_closetab_0		"Bouton de fermeture">
 <!ENTITY Ctr_closetab_1		"Sur l'onglet actif uniquement">
-<!ENTITY Ctr_closetab_2		"Aucun">
+<!ENTITY Ctr_closetab_2		"Aucune (désactiver le bouton)">
 <!ENTITY Ctr_closetab_3		"À la fin de la barre des onglets">
 <!ENTITY Ctr_closetab_4		"Au début de la barre des onglets">
 <!ENTITY Ctr_closetab_5		"Sur tous les onglets (forcer)">
@@ -89,7 +89,7 @@
 <!ENTITY Ctr_tobainfotab	"Le module « Tabs on Bottom » n'est pas compatible avec « &Ctr_title; » et devrait être désactivé. Utilisez les paramètres « &Ctr_cuitabsnontop; » disponibles à la place !">
 
 <!ENTITY Ctr_appbutton		"Ancien bouton &brandShortName;">
-<!ENTITY Ctr_appbutton0		"Désactivé">
+<!ENTITY Ctr_appbutton0		"Aucune (désactiver le bouton)">
 <!ENTITY Ctr_appbutton1		"Afficher sur une barre d'outils">
 <!ENTITY Ctr_appbutton1wt	"Afficher sur une barre d'outils (texte seul)">
 <!ENTITY Ctr_appbutton2		"Afficher sur la barre de titre de &brandShortName;">
@@ -110,9 +110,9 @@
 <!ENTITY Ctr_appbuttonc_pu	"Violet">
 <!ENTITY Ctr_appbuttonc_wh	"Blanc">
 <!ENTITY Ctr_appbuttonc_cu	"De couleur personnalisée">
-<!ENTITY Ctr_appbuttonct	"Personnaliser la couleur du bouton s'il est sur une barre d'outils">
+<!ENTITY Ctr_appbuttonct	"Personnaliser la couleur du bouton (s'il est sur une barre d'outils)">
 <!ENTITY Ctr_appbuttonI1	"Redémarrage recommandé">
-<!ENTITY Ctr_appbuttonI1e	"Uniquement visible sur la barre de titre de &brandShortName;, pas sur la barre de titre de Windows !">
+<!ENTITY Ctr_appbuttonI1e	"Le bouton &brandShortName; est uniquement visible sur la barre de titre de &brandShortName;, pas sur celle de Windows !">
 <!ENTITY Ctr_appbutmhi		"Position plus élevée (sur la barre des onglets)">
 <!ENTITY Ctr_appbautocol	"Définir automatiquement la couleur du canal (par défaut/Aurora/Nightly) du navigateur">
 <!ENTITY Ctr_appbutbdl		"Masquer les bordures et la couleur d'arrière-plan">
@@ -214,7 +214,7 @@
 <!ENTITY Ctr_bmbviewbmsb	"Menu déroulant : afficher « Afficher panneau des marque-pages »">
 <!ENTITY Ctr_bmbviewbmtb	"Menu déroulant : afficher « Afficher la barre personnelle »">
 <!ENTITY Ctr_bmbnounsort	"Menu déroulant : masquer « Autres marque-pages »">
-<!ENTITY Ctr_bmbutclpopup	"Popup: only show 'Bookmark this page' and bookmarks">
+<!ENTITY Ctr_bmbutclpopup	"Menu déroulant : afficher uniquement « Marquer cette page » et les onglets">
 <!ENTITY Ctr_bmbutnotext	"Masquer le texte sur la barre personnelle">
 <!ENTITY Ctr_skipprintpr	"Bouton « Imprimer » : sauter l'aperçu avant impression">
 <!ENTITY Ctr_tbconmenu		"Menu contextuel de barre d'outils : masquer « Déplacer vers le menu », « Retirer de la barre d'outils », « Actualiser/Marquer tous les onglets » et « Annuler la fermeture de l'onglet »">
@@ -293,7 +293,6 @@
 <!ENTITY Ctr_icopageinfo	"Favicon/globe/icône « i » : ouvrir la fenêtre « Informations sur la page » en cliquant sur l'icône">
 <!ENTITY Ctr_lbsbsize		"Personnaliser la largeur">
 <!ENTITY Ctr_searchbar		"Barre de recherche">
-<!ENTITY Ctr_urlbar_uc		"Désactiver la fonctionnalité « Autocomplétion unifiée »">
 <!ENTITY Ctr_autocomplete	"Fenêtre surgissante d'autocomplétion">
 <!ENTITY Ctr_altautocompl	"Apparence alternative">
 <!ENTITY Ctr_autocompl_it	"Supprimer les éléments « Rechercher avec » et « Consulter » (si présents)">
@@ -302,6 +301,7 @@
 <!ENTITY Ctr_autocompl_rhl	"Utiliser des couleurs Aero pour les résultats surlignés">
 <!ENTITY Ctr_autocompl_not	"Masquer les titres des pages">
 <!ENTITY Ctr_autocompl_sep	"Afficher un séparateur entre les résultats">
+<!ENTITY Ctr_urlbar_uc		"Désactiver la fonctionnalité « Autocomplétion unifiée »">
 <!ENTITY Ctr_lbsugresi		"Désactiver la limite de hauteur">
 <!ENTITY Ctr_cresultshcb	"Limite de hauteur personnalisée :">
 <!ENTITY Ctr_lbsugres		"Nombre de résultats :">
@@ -369,7 +369,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Réduire la hauteur">
 <!ENTITY Ctr_addonbarfs		"Afficher également en mode « Plein écran »">
 
-<!ENTITY Ctr_tabthrobber	"Image de chargement">
+<!ENTITY Ctr_tabthrobber	"Image de chargement :">
 <!ENTITY Ctr_bmanimation	"Animation du bouton étoile lors de l'ajout d'un nouveau marque-page">
 <!ENTITY Ctr_pananimation	"Animation d'ouverture des panneaux">
 <!ENTITY Ctr_tabanimation	"Animation d'ouverture et de fermeture des onglets">
@@ -418,8 +418,8 @@
 <!ENTITY Ctr_support_forum1	"MozillaZine (forum anglais)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (forum allemand)">
 <!ENTITY Ctr_github_issues	"Signaler des problèmes via Github">
-<!ENTITY Ctr_newversion		"Latest CTR version">
-<!ENTITY Ctr_newversion2	"Latest CTR beta">
+<!ENTITY Ctr_newversion		"Dernière version de CTR">
+<!ENTITY Ctr_newversion2	"Dernière version bêta de CTR">
 
 <!ENTITY Ctr_addon-bar.accesskey		"U">
 <!ENTITY appMenuGettingStarted.label	"Commencer">
@@ -427,8 +427,8 @@
 <!ENTITY Ctr_menu_restart.label			"Redémarrer">
 <!ENTITY Ctr_restartapp					"Afficher « Redémarrer » dans le menu « Fichier » et dans celui de l'ancien bouton &brandShortName;">
 <!ENTITY Ctr_ctrnewinv					"Souligner les nouvelles options de la version actuelle de &brandShortName;">
-<!ENTITY Ctr_cssoverride				"Custom css code">
-<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
+<!ENTITY Ctr_cssoverride				"Code CSS personnalisé">
+<!ENTITY Ctr_cssoverride2				"Le code CSS ne sera pas vérifié, même en cas d'erreurs !">
 
 <!ENTITY Ctr_openInCurrentTab			"Ouvrir les entrées dans l'onglet actuel">
 <!ENTITY Ctr_openInNewTab				"Ouvrir les entrées dans un nouvel onglet">
