--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Πάνω από τους σελιδοδείκτες">
 <!ENTITY Ctr_bmbviewbmsb	"Αναδυόμενο: εμφάνιση «Προβολή πλευρικής στήλης»">
 <!ENTITY Ctr_bmbviewbmtb	"Αναδυόμενο: εμφάνιση «Προβολή εργαλειοθήκης σελιδοδεικτών»">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"Αναδυόμενο: απόκρυψη μενού «Άλλοι σελιδοδείκτες»">
 <!ENTITY Ctr_bmbutclpopup	"Αναδυόμενο: εμφάνιση μόνο «Προσθήκη στους σελιδοδείκτες» και σελιδοδεικτών">
 <!ENTITY Ctr_bmbutnotext	"Απόκρυψη ετικέτας στην εργαλειοθήκη σελιδοδεικτών">
