--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -209,11 +209,12 @@
 <!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
 <!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panel menu appearance">
-<!ENTITY Ctr_bmbunsortbm	"Popup: 'Other Bookmarks' menu">
+<!ENTITY Ctr_bmbunsortbm	"Popup: show 'Other Bookmarks' menu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
-<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Bookmarks Sidebar'">
-<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Bookmarks Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Popup: hide 'Other Bookmarks'">
+<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Bookmarks Sidebar' menuitem">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Bookmarks Toolbar' menuitem">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'Other Bookmarks' menu and menuitem">
 <!ENTITY Ctr_bmbutclpopup	"Popup: only show 'Bookmark this page' and bookmarks">
 <!ENTITY Ctr_bmbutnotext	"Hide label on bookmarks bar">
 <!ENTITY Ctr_skipprintpr	"Print button: skip print preview">
