--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Menüü järjehoidjate kohal">
 <!ENTITY Ctr_bmbviewbmsb	"Menüühüpik: näita kirjet 'Kuva järjehoidjate külgriba'">
 <!ENTITY Ctr_bmbviewbmtb	"Menüühüpik: näita kirjet 'Kuva järjehoidjariba'">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"Menüühüpik: peida kirje 'Muud järjehoidjad'">
 <!ENTITY Ctr_bmbutclpopup	"Menüühüpik: näita ainult 'Lisa see leht järjehoidjatesse' ja järjehoidjaid">
 <!ENTITY Ctr_bmbutnotext	"Peida järjehoidjaribal sildid">
