--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zapołožkami">
 <!ENTITY Ctr_bmbviewbmsb	"Wuskakowacy meni: 'Bóčnicu zapołožkow pokazać' pokazać">
 <!ENTITY Ctr_bmbviewbmtb	"Wuskakowacy meni: 'Lajstu zapołožkow pokazać' pokazać">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"Wuskakowacy meni: 'Druhe zapołožki' schować">
 <!ENTITY Ctr_bmbutclpopup	"Wuskakowacy meni: jenož 'Tutu stronu jako zapołožku składować' a zapołožki pokazać">
 <!ENTITY Ctr_bmbutnotext	"Tekst na lajśce zapołožkow schować">
