--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"メニュー上部に表示">
 <!ENTITY Ctr_bmbviewbmsb	"ポップアップ: 「ブックマークサイドバーを表示」を表示する">
 <!ENTITY Ctr_bmbviewbmtb	"ポップアップ: 「ブックマークツールバーを表示」を表示する">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"ポップアップ: 「他のブックマーク」を隠す">
 <!ENTITY Ctr_bmbutclpopup	"ポップアップ: 「このページをブックマーク」とブックマークのみを表示する">
 <!ENTITY Ctr_bmbutnotext	"ブックマークツールバーのテキストを隠す">
