--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Menu ponad zakładkami">
 <!ENTITY Ctr_bmbviewbmsb	"Menu podręczne: pokaż 'Wyświetl panel zakładek'">
 <!ENTITY Ctr_bmbviewbmtb	"Menu podręczne: pokaż 'Wyświetl pasek zakładek'">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"Menu podręczne: ukryj 'Pozostałe zakładki'">
 <!ENTITY Ctr_bmbutclpopup	"Menu podręczne: pokaż tylko 'Dodaj zakładkę' oraz zakładki">
 <!ENTITY Ctr_bmbutnotext	"Ukryj etykietę na pasku zakładek">
