--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Menu acima dos favoritos">
 <!ENTITY Ctr_bmbviewbmsb	"Popup: exibir 'Ver Barra Lateral de Favoritos'">
 <!ENTITY Ctr_bmbviewbmtb	"Popup: exibir 'Ver Barra de Favoritos'">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"Popup: ocultar 'Outros Favoritos'">
 <!ENTITY Ctr_bmbutclpopup	"Popup: exibir somente 'Adicionar aos favoritos' e favoritos">
 <!ENTITY Ctr_bmbutnotext	"Ocultar rótulo na barra de favoritos">
