--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Меню над закладками">
 <!ENTITY Ctr_bmbviewbmsb	"Всплывающее меню: «Показать боковую панель закладок»">
 <!ENTITY Ctr_bmbviewbmtb	"Всплывающее меню: «Показать панель закладок»">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"Всплывающее меню: скрыть «Неподшитые закладки»">
 <!ENTITY Ctr_bmbutclpopup	"Всплывающее меню: показывать только «Добавить страницу» и закладки">
 <!ENTITY Ctr_bmbutnotext	"Скрыть текст на панели закладок">
