--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"菜单在书签之上">
 <!ENTITY Ctr_bmbviewbmsb	"弹出式菜单: 显示“查看侧边栏”">
 <!ENTITY Ctr_bmbviewbmtb	"弹出式菜单: 显示“查看工具栏”">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"弹出式菜单: 隐藏“未分类书签”">
 <!ENTITY Ctr_bmbutclpopup	"弹出式菜单: 仅显示“将此页加为书签”和书签">
 <!ENTITY Ctr_bmbutnotext	"隐藏书签工具栏上的文本标签">
