--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Menu over bogmærker">
 <!ENTITY Ctr_bmbviewbmsb	"Pop-op: vis 'Vis bogmærker i sidepanel'">
 <!ENTITY Ctr_bmbviewbmtb	"Pop-op: vis 'Vis bogmærkelinjen'">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"Pop-op: skjul 'Usorterede bogmærker'">
 <!ENTITY Ctr_bmbutclpopup	"Popup: only show 'Bookmark this page' and bookmarks">
 <!ENTITY Ctr_bmbutnotext	"Skjul etiket på bogmærkelinje">
