--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -209,11 +209,12 @@
 <!ENTITY Ctr_oldplacesbut	"Lesezeichen-Schaltflächen: Alte Darstellung">
 <!ENTITY Ctr_dl_pm_drop		"Download-Panel: Aufklappmenüschaltfläche anzeigen">
 <!ENTITY Ctr_bmbutpanelm	"Aufklappmenü: 'Panel'-Darstellung">
-<!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Weitere Lesezeichen'-Menü anzeigen">
+<!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Weitere Lesezeichen' als Menü anzeigen">
 <!ENTITY Ctr_bmbunsortbm2	"Menü über den Lesezeichen">
-<!ENTITY Ctr_bmbviewbmsb	"Aufklappmenü: 'Lesezeichen-Seitenleiste' anzeigen">
-<!ENTITY Ctr_bmbviewbmtb	"Aufklappmenü: 'Lesezeichen-Symbolleiste' anzeigen">
-<!ENTITY Ctr_bmbnounsort	"Aufklappmenü: 'Weitere Lesezeichen' verstecken">
+<!ENTITY Ctr_bmbviewbmsb	"Aufklappmenü: 'Lesezeichen-Seitenleiste'-Eintrag anzeigen">
+<!ENTITY Ctr_bmbviewbmtb	"Aufklappmenü: 'Lesezeichen-Symbolleiste anzeigen'-Eintrag anzeigen">
+<!ENTITY Ctr_bmbutnotb		"Aufklappmenü: 'Lesezeichen-Symbolleiste'-Menü verstecken">
+<!ENTITY Ctr_bmbnounsort	"Aufklappmenü: 'Weitere Lesezeichen'-Menü und -Eintrag verstecken">
 <!ENTITY Ctr_bmbutclpopup	"Aufklappmenü: nur 'Lesezeichen hinzufügen' und Lesezeichen anzeigen">
 <!ENTITY Ctr_bmbutnotext	"Text auch auf der Lesezeichen-Symbolleiste verstecken">
 <!ENTITY Ctr_skipprintpr	"Drucken-Schaltfläche: Druckvorschau überspringen">
