--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -213,6 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Menú por encima de los marcadores">
 <!ENTITY Ctr_bmbviewbmsb	"Mostrar 'Ver el panel lateral de marcadores'">
 <!ENTITY Ctr_bmbviewbmtb	"Mostrar 'Ver la barra de marcadores'">
+<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
 <!ENTITY Ctr_bmbnounsort	"Ocultar 'Otros marcadores'">
 <!ENTITY Ctr_bmbutclpopup	"Sólo mostrar 'Añadir esta página a marcadores' y los marcadores">
 <!ENTITY Ctr_bmbutnotext	"Ocultar etiquetas en la barra de marcadores">
