--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -213,7 +213,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zaznamki">
 <!ENTITY Ctr_bmbviewbmsb	"Pojavna okna: prikaži 'Pokaži stransko vrstico'">
 <!ENTITY Ctr_bmbviewbmtb	"Pojavna okna: prikaži 'Orodno vrstico pogledov'">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
+<!ENTITY Ctr_bmbutnotb		"Pojavna okna: skrij meni 'Vrstica zaznamkov'">
 <!ENTITY Ctr_bmbnounsort	"Pojavna okna: skrij 'Nerazvrščene zaznamke'">
 <!ENTITY Ctr_bmbutclpopup	"Pojavna okna: prikaži samo 'Dodaj stran med zaznamke' in zaznamke">
 <!ENTITY Ctr_bmbutnotext	"Skrij oznako v vrstici zaznamkov">
