--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Start page (about:home): hide snippets">
 <!ENTITY Ctr_search_ui		"Vyhledávání">
 <!ENTITY Ctr_ctroldsearch	"Starý styl vyhledávání">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"Po vyhledávání vyčistit pole hledání">
 <!ENTITY Ctr_ctroldsearchr	"Po vyhledávání přejít k prvnímu vyhledávači v seznamu">
 <!ENTITY Ctr_ctrosearchdel	"delay">
