--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Startseite (about:home): Snippets verstecken">
 <!ENTITY Ctr_search_ui		"Suche">
 <!ENTITY Ctr_ctroldsearch	"Alte Suche">
+<!ENTITY Ctr_ctroldsearchd	"Nicht kompatibel zu anderen Sucherweiterungen!">
 <!ENTITY Ctr_ctroldsearchc	"Eingabefeld nach der Suche leeren">
 <!ENTITY Ctr_ctroldsearchr	"Nach der Suche zur ersten Suchmaschine in der Liste wechseln">
 <!ENTITY Ctr_ctrosearchdel	"Ausführungsverzögerung">
