--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Αρχική σελίδα (about:home): απόκρυψη αποσπασμάτων κειμένου">
 <!ENTITY Ctr_search_ui		"Αναζήτηση">
 <!ENTITY Ctr_ctroldsearch	"Παλιότερη διεπαφή αναζήτησης">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"Κένωση πλαισίου αναζήτησης μετά την αναζήτηση">
 <!ENTITY Ctr_ctroldsearchr	"Επαναφορά στην πρώτη μηχανή αναζήτησης στη λίστα μετά την αναζήτηση">
 <!ENTITY Ctr_ctrosearchdel	"καθυστέρηση">
