--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Página de inicio (about:home): Ocultar miniaturas">
 <!ENTITY Ctr_search_ui		"Buscar">
 <!ENTITY Ctr_ctroldsearch	"Menú antiguo de la barra de búsqueda">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"Limpiar barra de búsqueda después de buscar">
 <!ENTITY Ctr_ctroldsearchr	"Volver al primer motor de búsqueda de la lista después de buscar">
 <!ENTITY Ctr_ctrosearchdel	"de retardo">
