--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Avaleht (about:home): peida katked">
 <!ENTITY Ctr_search_ui		"Otsing">
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
 <!ENTITY Ctr_ctroldsearchr	"Pärast otsingu teostamist taasta vaikimisi otsingumootor">
 <!ENTITY Ctr_ctrosearchdel	"viivitusega">
