--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Pagina iniziale (about:home): nascondi gli snippet">
 <!ENTITY Ctr_search_ui		"Ricerca">
 <!ENTITY Ctr_ctroldsearch	"Ricerca vecchio stile">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"Pulisci la casella di ricerca dopo aver effettuato la ricerca">
 <!ENTITY Ctr_ctroldsearchr	"Ripristina il primo motore di ricerca dell'elenco dopo aver effettuato la ricerca">
 <!ENTITY Ctr_ctrosearchdel	"Ritardo esecuzione in ms">
