--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Página inicial (about:home): ocultar snippets">
 <!ENTITY Ctr_search_ui		"Pesquisa">
 <!ENTITY Ctr_ctroldsearch	"Pesquisa antiga">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"Limpar caixa de pesquisa após pesquisar">
 <!ENTITY Ctr_ctroldsearchr	"Reverter para primeiro mecanismo de busca na lista após pesquisar">
 <!ENTITY Ctr_ctrosearchdel	"atraso">
