--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Начальная страница (about:home): скрыть сниппеты">
 <!ENTITY Ctr_search_ui		"Поиск">
 <!ENTITY Ctr_ctroldsearch	"Старый поиск">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"Очистить форму после поиска">
 <!ENTITY Ctr_ctroldsearchr	"После поиска переключаться на первую в списке поисковую систему">
 <!ENTITY Ctr_ctrosearchdel	"Задержка выполнения">
