--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"开始页面 (about:home): 隐藏片断">
 <!ENTITY Ctr_search_ui		"搜索">
 <!ENTITY Ctr_ctroldsearch	"旧式搜索">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"搜索后清除搜索框">
 <!ENTITY Ctr_ctroldsearchr	"搜索后重置为列表中的第一个搜索引擎">
 <!ENTITY Ctr_ctrosearchdel	"延迟">
