--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"首頁 (about:home): 隱藏連向 addons.mozilla.org 的連結與敘述">
 <!ENTITY Ctr_search_ui		"搜尋">
 <!ENTITY Ctr_ctroldsearch	"傳統搜尋列">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"搜尋後，清除搜尋列">
 <!ENTITY Ctr_ctroldsearchr	"搜尋後，搜尋列歸位至第一個搜尋引擎">
 <!ENTITY Ctr_ctrosearchdel	"延時">
