--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Startowa strona (about:home): šlipki schować">
 <!ENTITY Ctr_search_ui		"Pytanje">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"Po pytanju pytanske polo wuprózdnić">
 <!ENTITY Ctr_ctroldsearchr	"Po pytanju so k prěnjej pytawje w lisćinje wróćić">
 <!ENTITY Ctr_ctrosearchdel	"komdźenje">
