--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -183,6 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Домашня сторінка (about:home): приховати фрагменти">
 <!ENTITY Ctr_search_ui		"Пошук">
 <!ENTITY Ctr_ctroldsearch	"Старий пошук">
+<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
 <!ENTITY Ctr_ctroldsearchc	"Очистити пошукове поле після пошуку">
 <!ENTITY Ctr_ctroldsearchr	"Відкотити до першої пошукової системи в списку після пошуку">
 <!ENTITY Ctr_ctrosearchdel	"Затримка виконання">
