Updates to the Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -183,7 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Začetna stran (about:home): skrij izrezke">
 <!ENTITY Ctr_search_ui		"Iskanje">
 <!ENTITY Ctr_ctroldsearch	"Staro iskanje">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"Ni združljivo z drugim dodatki za iskanje!">
 <!ENTITY Ctr_ctroldsearchc	"Počisti iskalno polje po iskanju">
 <!ENTITY Ctr_ctroldsearchr	"Po iskanju povrni iskalnik na prvega s seznama">
 <!ENTITY Ctr_ctrosearchdel	"zakasnitev">
